Java21: getFirst can be used